# MikTik

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  model.rs  registry.rs  tokenizer.rs
src/backend/: huggingface.rs  mod.rs  sentencepiece.rs  tiktoken.rs
tests/: production_corpus.rs
